# libsqlite3

./: CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac  dist.info  libsqlite.def  sqlite3.pc
cmake/: FindReadline.cmake
lib/: libsqlite3.dylib
tea/: configure  configure.in
tea/generic/: tclsqlite3.c
